<resources>
    <string name="healthy_name">healthy module</string>
    <string name="healthy_my_state">State</string>
    <string name="healthy_sport">sport</string>
    <string name="healthy_all_sport">more sport</string>
    <string name="healthy_step">step</string>
    <string name="healthy_sleep">sleep</string>
    <string name="healthy_heart">heart rate</string>
    <string name="healthy_blood_pressure">blood pressure</string>
    <string name="healthy_blood_oxygen">blood oxygen</string>
    <string name="healthy_temp">body temperature</string>
    <string name="healthy_edit_card">Edit card</string>
    <string name="healthy_last_sport">Last Sport</string>
    <string name="healthy_sport_list">Sport List</string>
    <string name="healthy_sport_last">To the bottom~</string>
    <string name="healthy_no_sport">No sport records yet, so start sporting</string>
    <string name="healthy_card_visiable">Items displayed (hold down and drag on the right side to adjust the order)</string>
    <string name="healthy_card_gone">Hidden items</string>
    <string name="healthy_card_need_gone">Drag items that do not need to be displayed here</string>
    <string name="healthy_day">Day</string>
    <string name="healthy_week">Week</string>
    <string name="healthy_month">Month</string>
    <string name="healthy_sun">Sun.</string>
    <string name="healthy_sta">STA.</string>
    <string name="healthy_survey">Today\'s situation</string>
    <string name="healthy_week_survey">Weekly situation</string>
    <string name="healthy_month_survey">Monthly situation</string>
    <string name="healthy_all_step">Steps</string>
    <string name="healthy_all_calorie">Calorie</string>
    <string name="healthy_all_distance">Distance</string>
    <string name="healthy_plan">Today\'s goal</string>
    <string name="healthy_day_step">Average Steps</string>
    <string name="healthy_day_calorie">Average Calorie</string>
    <string name="healthy_day_distance">Average Distance</string>
    <string name="healthy_radio">Goal</string>
    <string name="healthy_sleep_info">Sleep Information</string>
    <string name="healthy_sleep_deep">Deep Sleep</string>
    <string name="healthy_sleep_light">Light Sleep</string>
    <string name="healthy_sleep_average_sleep">Average Sleep Time</string>
    <string name="healthy_sleep_average_deep">Average Deep Sleep Time</string>
    <string name="healthy_sleep_average_light">Average Light Sleep Time</string>
    <string name="healthy_sleep_bed">Sleep time</string>
    <string name="healthy_sleep_wake">Wake time</string>
    <string name="healthy_heart_average">Average Heart Rate</string>
    <string name="healthy_heart_max">Max Heart Rate</string>
    <string name="healthy_heart_min">Min Heart Rate</string>
    <string name="healthy_heart_level">Heart Rate Level</string>
    <string name="healthy_heart1">Limit(≥161)</string>
    <string name="healthy_heart2">Anaerobic(149~160)</string>
    <string name="healthy_heart3">Aerobic(131~138)</string>
    <string name="healthy_heart4">Fat Burn(112~130)</string>
    <string name="healthy_heart5">Warm Up(90~111)</string>
    <string name="healthy_heart6">Relax(≤89)</string>
    <string name="healthy_spo_average">Average Data</string>
    <string name="healthy_spo_max">Max Data</string>
    <string name="healthy_spo_min">Min Data</string>
    <string name="healthy_spo_measure_list">Measurement List</string>
    <string name="healthy_spo_measure_info">Measurement Details</string>
    <string name="healthy_spo_abnormal">Hypoxia Number</string>
    <string name="healthy_temp_abnormal">Fever Number</string>
    <string name="healthy_temp_average">Average Data</string>
    <string name="healthy_temp_max">Max Data</string>
    <string name="healthy_temp_min">Min Data</string>
    <string name="healthy_sbp_average">Average Sbp Data</string>
    <string name="healthy_dbp_average">Average Dbp Data</string>
    <string name="healthy_bp_abnormal">Abnormal Number</string>
    <string name="healthy_unit">%dtimes</string>

    <string name="healthy_tomorrow">Available in the future</string>
    <string name="healthy_not_data">There is no data for the selected date</string>
</resources>
