<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corner"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.szip.healthy.View.ReportTableView
                android:id="@+id/tableView"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_white_corner">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_overview"/>

                <TextView
                    android:id="@+id/reportTypeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/healthy_week_survey"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart_average"/>

                <TextView
                    android:id="@+id/averageDataTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart_max"/>

                <TextView
                    android:id="@+id/maxDataTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart_min"/>

                <TextView
                    android:id="@+id/minDataTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/heartLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_white_corner"
            android:layout_margin="15dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_hr"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="@string/healthy_heart_level"/>

            </LinearLayout>


            <com.szip.healthy.View.HeartLevelView
                android:id="@+id/heartView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart1"/>

                <TextView
                    android:id="@+id/level1TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart2"/>

                <TextView
                    android:id="@+id/level2TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart3"/>

                <TextView
                    android:id="@+id/level3TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart4"/>

                <TextView
                    android:id="@+id/level4TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart5"/>

                <TextView
                    android:id="@+id/level5TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/healthy_level6"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:text="@string/healthy_heart6"/>

                <TextView
                    android:id="@+id/level6TimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>